--- a/BJGeDrenouille/main/templates/main/base.html
+++ b/BJGeDrenouille/main/templates/main/base.html
@@ -88,7 +88,7 @@
                     <ul class="dropdown-menu bg-dark" data-bs-theme="dark">
                         {% tag_companies as companies %}
                         {% for company in companies %}
-                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" %}">{{company.name}}</a></li>
+                        <li><a class="dropdown-item text-white" href="{% url "catalog:index" company.slug %}">{{company.name}}</a></li>
                         {% endfor %}
                     </ul>
                 </div>
