--- a/BJGeDrenouille/goods/templates/goods/catalog.html
+++ b/BJGeDrenouille/goods/templates/goods/catalog.html
@@ -120,9 +120,9 @@
 {% endblock %}
 
 {% block footer %}
-<footer class="py-4 bg-dark">
+<footer class="py-4 ">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Home Python Hub Studio 2023</p>
+        <p class="m-0 text-center text-white">Copyright &copy; BJGeDrenouille Nazarov Timophey 2024</p>
     </div>
 </footer>
 {% endblock %}
