--- a/BJGeDrenouille/main/templates/main/about.html
+++ b/BJGeDrenouille/main/templates/main/about.html
@@ -10,13 +10,13 @@
 {% block content %}
     <div class="mt-5 pt-5 bg-white custom-shadow rounded">
         <h2 class="m-2"><strong>{{ content }}</strong></h2>
-        <p class="m-2">{{ text_on_page }}</p>
+        <p class="m-2">Наш интернет-магазин BJGeDrenouille основан в 2010 году и с тех пор мы работаем над тем, чтобы предложить нашим клиентам только лучшие сырки из разных стран мира. Мы дорожим нашими клиентами и делаем все, чтобы обеспечить им максимальный комфорт при покупке.</p>
     </div>
 {% endblock %}
 {% block footer %}
-<footer class="py-4 bg-dark">
+<footer class="py-4 ">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Home Python Hub Studio 2023</p>
+        <p class="m-0 text-center text-white">Copyright &copy; BJGeDrenouille Nazarov Timophey 2024</p>
     </div>
 </footer>
 {% endblock %}
