--- a/BJGeDrenouille/templates/base.html
+++ b/BJGeDrenouille/templates/base.html
@@ -20,10 +20,11 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+    <header class="header">
+        <nav class="navbar navbar-expand-lg" data-bs-theme="dark">
             <div class="container">
-                <a class="navbar-brand" href="{% url "main:index" %}">Home</a>
+                <a class="navbar-brand" href="{% url "main:index" %}"><img src="{% static "deps/images/logo.png" %}"
+                    alt="Аватар пользователя" class="header__logo"></img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
