--- a/BJGeDrenouille/users/templates/users/profile.html
+++ b/BJGeDrenouille/users/templates/users/profile.html
@@ -19,7 +19,7 @@
                                         alt="Аватар пользователя" class="img-fluid rounded-circle"
                                         style="max-width: 150px;">
                                 {% else %}
-                                    <img src="{% static "deps/images/baseavatar.jpg" %}"
+                                    <img src="{% static "deps/images/ava.jpg" %}"
                                         alt="Аватар пользователя" class="img-fluid rounded-circle"
                                         style="max-width: 150px;">
                                 {% endif %}
